<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Soundscreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="wallpaper_description">Soundscreen wallpaper is integrated with your SoundCloud account</string>

    <string name="pref_duration">Wallpaper display duration</string>
    <string name="pref_duration_summary">The wallpaper will change every [%1$s]</string>

    <string name="pref_duration_entry_15sec">15 seconds</string>
    <string name="pref_duration_entry_30sec">30 seconds</string>
    <string name="pref_duration_entry_1min">1 minute</string>
    <string name="pref_duration_entry_5min">5 minutes</string>

    <string name="duration_entry_15sec">15</string>
    <string name="duration_entry_30sec">30</string>
    <string name="duration_entry_1min">1</string>
    <string name="duration_entry_5min">5</string>

    <string name="pref_download">Auto-update wallpapers</string>

    <string name="pref_download_entry_do_not_update">Do not update</string>
    <string name="pref_download_entry_mobile_and_wifi">Wi-Fi or mobile network</string>
    <string name="pref_download_entry_wifi_only">Wi-Fi only</string>

    <string name="download_entry_do_not_update">0</string>
    <string name="download_entry_mobile_and_wifi">1</string>
    <string name="download_entry_wifi_only">2</string>

    <string name="pref_download_summary">Auto-update wallpapers over [%1$s]</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_about">About</string>

    <string name="pref_build">Build version</string>
    <string name="pref_build_summary">Version: %1$s</string>
    <string name="button">Set as LiveWallpaper</string>
    <string name="menu_settings">Settings</string>

    <string name="about">Soundscreen is a LiveWallpaper with your favourite Soundcloud tunes!</string>
    <string name="menu_resync">Resync</string>

    <string name="pref_sync">Sync</string>

    <string name="pref_sync_entry_1_hour">1 hour</string>
    <string name="pref_sync_entry_2_hour">2 hours</string>
    <string name="pref_sync_entry_6_hour">6 hours</string>

    <string name="sync_entry_1_hour">1</string>
    <string name="sync_entry_2_hours">2</string>
    <string name="sync_entry_6_hours">6</string>

    <string name="pref_sync_summary">Synchronize every [%1$s]</string>

    <string name="pref_cache">Cache size</string>

    <string name="pref_cache_entry_10_tracks">10 tracks</string>
    <string name="pref_cache_entry_25_tracks">25 tracks</string>
    <string name="pref_cache_entry_50_tracks">50 tracks</string>

    <string name="cache_entry_10_tracks">10</string>
    <string name="cache_entry_25_tracks">25</string>
    <string name="cache_entry_50_track">50</string>

    <string name="pref_cache_summary">Cache up to [%1$s]</string>

</resources>
